Add JVM arguments for Java modules