@@ -182,3 +182,7 @@ pluginBundle {
 tasks.wrapper {
     distributionType = Wrapper.DistributionType.ALL
 }
+
+tasks.withType<Test>().configureEach {
+    jvmArgs("--add-opens=java.base/java.util=ALL-UNNAMED")
+}
